--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,7 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300&family=Roboto&display=swap");
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #396E94   ;
@@ -11,8 +11,8 @@ Fonts are separated by a & */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Bebas Neue";
-  --paragraph-font: Raleway, Open Sans, sans-serif;
+  --heading-font: "Monserrat";
+  --paragraph-font: Roboto, Open Sans, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
@@ -42,6 +42,10 @@ img {
   max-width: 300px;
 }
 h1, h2, h3, h4, h5, h6 {
+  font-family: var(--heading-font);
+  color: var(--paragraph-background-color);
+}
+h4 {
   font-family: var(--heading-font);
   color: var(--headline-color-on-white);
 }
