--- a/styles/styles_2.css
+++ b/styles/styles_2.css
@@ -31,11 +31,9 @@ Fonts are separated by a & */
 
 body {
   max-width: 960px;
-  margin: 0 auto;
   padding: 4em;
   font-size: 18px;
   background-color: #E8ADAA;
-  font
 }
 img {
   display: block;
@@ -195,8 +193,8 @@ main p {
   text-align: center;
 }
 footer p {
-  font-size: 20px;
-  margin: 20px auto;
+  font-size: 14px;
+  background-color: #E8ADAA
 }
 a:hover {
   background-color: white;
